Remove macOS system theme
This was used before FlatLaF was adopted there.

Issue: #405